--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-VITE_BACKEND_URL = https://ezra-sk-backend.onrender.com
-#VITE_BACKEND_URL = http://localhost:5005
+# VITE_BACKEND_URL = https://ezra-sk-backend.onrender.com
+VITE_BACKEND_URL = http://localhost:5005
